<resources>
    <string name="aar_paused">Paused</string>
    <string name="aar_playing">Playing</string>
    <string name="aar_recording">Recording</string>
    <string name="aar_save">Save</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abn_amro">ABN AMRO</string>
    <string name="abn_amro_test">ABN AMRO Test</string>
    <string name="action_accept_offer">Action_Accept_Offer</string>
    <string name="action_call_from_order">Call_Event_From_Order</string>
    <string name="action_cancel_order">Action_Cancel_Order</string>
    <string name="action_change_coureir">Action_Change_Coureir</string>
    <string name="action_checkin">Action_Checkin</string>
    <string name="action_create_bill">Action_Create_Bill</string>
    <string name="action_login_facebook">Action_Login_Facebook</string>
    <string name="action_login_google">Action_Login_Google</string>
    <string name="action_login_mobile">Action_Login_Mobile</string>
    <string name="action_order_now">Action_Order_Now</string>
    <string name="action_pay_mrsool">Action_Pay_Mrsool</string>
    <string name="action_post_order">Action_Post_Order</string>
    <string name="action_reject_offer">Action_Reject_Offer</string>
    <string name="action_search">Action_Search</string>
    <string name="action_show_nearby_all">Action_Show_Nearby_All</string>
    <string name="action_skip_login">Action_Skip_Login</string>
    <string name="action_verify_me">Action_Verify_Me</string>
    <string name="action_withdraw_from_order">Action_Withdraw_From_Order</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="add_feature">Add your thoughts</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="alert_attach_bil_pic">Please attach bill picture</string>
    <string name="alert_enter_cost_goods">Please enter cost of goods</string>
    <string name="alert_enter_coupon_code">Please enter coupon code</string>
    <string name="alert_enter_number_without_zero">Please enter mobile number without \'0\'</string>
    <string name="alert_enter_number_without_zero_one_two">The number should be in format 01xxxxxxxxx</string>
    <string name="alert_enter_number_without_zero_two">Mobile number should not start with \'0\' or \'2\'</string>
    <string name="alert_foursquare">Couldn\'t connect to foursquare to fetch stores :(</string>
    <string name="alert_low_rating">You are submitting a low rating for this user, are you sure?</string>
    <string name="alert_max_feedback">You can not give feedback more than 2 times.</string>
    <string name="alert_please_select_reason">Please select a reason</string>
    <string name="alert_select_coupon_option">Please select discount option</string>
    <string name="alert_select_reason">Please select reason to complaint</string>
    <string name="alert_xmpp_error">Please check internet connection</string>
    <string name="alipay">Alipay</string>
    <string name="alt_enter_location">Please Enter Location</string>
    <string name="alt_no_location">No nearby location found</string>
    <string name="amex">American Express</string>
    <string name="amp_event_mobile_login_number_input">mobile login - number input</string>
    <string name="amp_event_param_mobile_number">mobile number</string>
    <string name="announcement_noti_detail">Annoucements, ads and others.</string>
    <string name="app_name">MRSOOL</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asn_bank">ASN Bank</string>
    <string name="attr_cancel_reason">cancel_reason</string>
    <string name="attr_courier_rating">courier_rating</string>
    <string name="attr_courier_status">courier_status</string>
    <string name="attr_customer_rating">customer_rating</string>
    <string name="attr_distance">distance</string>
    <string name="attr_order_id">order_id</string>
    <string name="attr_order_started">order_started</string>
    <string name="attr_rated_type">rated_type</string>
    <string name="attr_rating_value">rating_value</string>
    <string name="attr_reason">reason</string>
    <string name="attr_signup_method">signup_method</string>
    <string name="attr_store_name">store_name</string>
    <string name="attr_time">time</string>
    <string name="attr_time_canceled">time_canceled</string>
    <string name="attr_time_changed">time_changed</string>
    <string name="attr_time_delivered">time_delivered</string>
    <string name="attr_time_dismissed">time_dismissed</string>
    <string name="attr_time_initiated">time_initiated</string>
    <string name="attr_time_placed">time_placed</string>
    <string name="attr_time_received">time_received</string>
    <string name="attr_time_signup">time_signup</string>
    <string name="attr_time_withdraw">time_withdraw</string>
    <string name="attr_user_id">user_id</string>
    <string name="attr_value">value</string>
    <string name="austria">Österreich</string>
    <string name="av_app_name">Audio Visualization</string>
    <string name="belgium">Belgique</string>
    <string name="boleto">BOLETO Bancário</string>
    <string name="bottom_menu_Me">Me</string>
    <string name="bottom_menu_courier">Courier</string>
    <string name="bottom_menu_orders">Orders</string>
    <string name="bottom_menu_stores">Stores</string>
    <string name="bottom_menu_updates">Updates</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brach_event_param_buyer_id">buyer_id</string>
    <string name="brach_event_param_channel">Channel</string>
    <string name="brach_event_param_order_id">order_id</string>
    <string name="brach_event_param_user_id">user_id</string>
    <string name="branch_event_accept_offer">ACCEPT_OFFER</string>
    <string name="branch_event_first_delivered_order">First_delivered_order</string>
    <string name="branch_event_open_Shop">OPEN_SHOP</string>
    <string name="branch_event_submit_order">SUBMIT_ORDER</string>
    <string name="branch_event_submit_rating">SUBMIT_RATING</string>
    <string name="branch_event_user_signin">SIGNIN</string>
    <string name="branch_event_user_signup">SIGNUP</string>
    <string name="branch_event_user_signup_revised">SIGNUP</string>
    <string name="btn_add_credit_card">okay, add credit card </string>
    <string name="btn_enable_notification">ENABLE NOTIFICATIONS</string>
    <string name="btn_go_to_my_orders">Go to my orders</string>
    <string name="btn_not_now">Not Now</string>
    <string name="btn_place_order">Place order</string>
    <string name="btn_submit">submit</string>
    <string name="btn_update">Update</string>
    <string name="bunq_bank">Bunq Bank</string>
    <string name="callback_host">open</string>
    <string name="callback_scheme">mrsoolpay</string>
    <string name="card_ending_format">•••• %s</string>
    <string name="cards_only_message">During curfew only cards are allowed. Please add a card in your profile settings first.</string>
    <string name="cartebleue">Carte Bleue</string>
    <string name="category_click">Click</string>
    <string name="category_screen">Screen</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="checkout_auth_confirm_payment">To confirm payment</string>
    <string name="checkout_fingerprint_cancel">Cancel</string>
    <string name="checkout_fingerprint_enter_pin">Enter PIN</string>
    <string name="checkout_fingerprint_touch_sensor">Touch sensor</string>
    <string name="close">Close</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="lbl_all_offer_stop">All offers notification will be stopped</string>
    <string name="lbl_attachment">Attachment</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_choose_a_reason">Choose a reason</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_dg_ask_for_rate_msg">MRSOOL needs your help, and it will only take 2 minutes of your time, can you please rate us in the Application Store?</string>
    <string name="lbl_dg_later">Later</string>
    <string name="lbl_dg_no_thanks">No, Thanks</string>
    <string name="lbl_dg_rate_mrsool">Rate MRSOOL</string>
    <string name="lbl_dg_rate_now">Rate Now</string>
    <string name="lbl_dg_thanks_milion">Thanks a Million!</string>
    <string name="lbl_go_offline">Go Offline</string>
    <string name="lbl_max_3_images">You can upload max 3 image</string>
    <string name="lbl_me_cancel">Cancel</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_notes_hint">Write your notes here</string>
    <string name="lbl_reason">Reason</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_stop_near_by_order">Are you sure that you want to stop getting notifications</string>
    <string name="lbl_yes">Yes</string>
    <string name="menu_cancel_order">Cancel Order</string>
    <string name="menu_change_courier">Change Courier</string>
    <string name="menu_choose_photo">Send Picture</string>
    <string name="menu_goods_delivered">Goods Delivered</string>
    <string name="menu_package_pickedup">Package Pickedup</string>
    <string name="menu_rate_the_Courier">Rate the Courier</string>
    <string name="menu_share_location">Share Location</string>
    <string name="menu_start_tracking">Start Journey</string>
    <string name="menu_title_route">Route</string>
    <string name="menu_withdraw_order">Withdraw Order</string>
    <string name="payment_error_detail">Payment submission failed please make sure the payment information are correct or contact the bank in case the entered information are correct</string>
    <string name="payment_error_title">Having an issue with payment</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="send_email">Send email</string>
    <string name="title_file_a_compaint">File A Complaint</string>
    <string name="title_issue_bill">Issue Bill</string>
    <string name="view_webpage">View webpage</string>
</resources>