<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/main_content" android:background="@color/pending_order_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_title_bar_accent"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16">
            <com.mrsool.customeview.CustomeTextViewRobotoBlack android:textSize="@dimen/sp_13" android:textColor="@color/package_title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/lbl_reason" android:textAllCaps="true"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/llChooseReason" android:background="@drawable/bg_white_corner_4" android:padding="@dimen/dp_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_5">
                <com.mrsool.customeview.CustomeTextViewRobotoRegular android:textSize="@dimen/sp_16" android:textColor="@color/text_color_5b" android:ellipsize="end" android:gravity="start" android:id="@+id/tvReason" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/lbl_choose_a_reason" android:maxLines="2" android:layout_weight="1" android:layout_marginStart="@dimen/dp_15"/>
                <com.mrsool.customeview.CustomeTextViewRobotoBlack android:textSize="@dimen/sp_16" android:textColor="@color/sky_blue_color" android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_change" android:layout_marginStart="@dimen/dp_5" android:layout_marginEnd="@dimen/dp_16"/>
            </LinearLayout>
            <com.mrsool.customeview.CustomeTextViewRobotoBlack android:textSize="@dimen/sp_13" android:textColor="@color/package_title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/lbl_notes" android:textAllCaps="true"/>
            <com.mrsool.customeview.CustomeEditTextRobotoRegular android:textSize="@dimen/sp_16" android:textColorHint="@color/coupon_gray" android:gravity="top" android:id="@+id/edComment" android:background="@drawable/bg_round_corner_edit_text_gray_4" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_5" android:hint="@string/lbl_notes_hint" android:maxLines="4" android:minLines="4" android:inputType="textMultiLine" android:paddingStart="@dimen/dp_16" android:paddingEnd="@dimen/dp_16"/>
            <com.mrsool.customeview.CustomeTextViewRobotoBlack android:textSize="@dimen/sp_13" android:textColor="@color/package_title_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/lbl_attachment"/>
            <com.mrsool.customeview.CustomeTextViewRobotoMedium android:textSize="@dimen/sp_12" android:textColor="@color/text_color_7a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_1" android:text="@string/lbl_max_3_images"/>
            <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/rvAttachments" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_15" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:layout_gravity="bottom" android:layout_width="match_parent" android:layout_height="@dimen/dp_56">
        <com.mrsool.customeview.CustomeTextViewRobotoBold android:textSize="@dimen/sp_20" android:textColor="@color/white" android:gravity="center" android:layout_gravity="bottom" android:id="@+id/btnContinue" android:background="@color/sky_blue_color" android:layout_width="match_parent" android:layout_height="@dimen/dp_56" android:text="@string/lbl_send" android:includeFontPadding="false" android:textAllCaps="true"/>
        <ImageView android:id="@+id/bgContinue" android:background="?attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
