<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/bg_round_corner_dialog_16" android:padding="@dimen/dp_24" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.mrsool.customeview.CustomeTextViewRobotoBold android:textSize="@dimen/sp_16" android:textColor="@color/text_color_5b" android:id="@+id/tvTitleOffline" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_go_offline"/>
    <com.mrsool.customeview.CustomeTextViewRobotoRegular android:textSize="@dimen/sp_16" android:textColor="@color/text_color_5b" android:id="@+id/tvWarnOffline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_3" android:text="@string/lbl_stop_near_by_order"/>
    <ImageView android:layout_gravity="center" android:background="?attr/actionBarItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_courier_online" android:minWidth="@dimen/dp_107" android:minHeight="@dimen/dp_107" android:contentDescription="@string/lbl_close" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_8" android:layout_marginStart="@dimen/dp_12" android:layout_marginEnd="@dimen/dp_12">
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/sp_16" android:textColor="@color/text_color_5b" android:id="@+id/btnCancel" android:paddingTop="@dimen/dp_8" android:paddingBottom="@dimen/dp_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/dp_104" android:minHeight="@dimen/dp_55" android:text="@string/lbl_me_cancel" android:textAllCaps="false" app:backgroundTint="@color/color_white_light" app:cornerRadius="@dimen/dp_4" app:elevation="@dimen/dp_0" app:rippleColor="@color/text_color_96" app:strokeColor="@color/color_white_light" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <LinearLayout android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ProgressBar android:layout_gravity="center" android:id="@+id/pbOffline" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton android:textSize="@dimen/sp_16" android:textColor="@color/white" android:id="@+id/btnYesOffline" android:paddingTop="@dimen/dp_8" android:paddingBottom="@dimen/dp_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/dp_104" android:minHeight="@dimen/dp_55" android:text="@string/lbl_yes" android:textAllCaps="false" app:backgroundTint="@color/red_lite_3" app:cornerRadius="@dimen/dp_4"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <com.mrsool.customeview.CustomeTextViewRobotoRegular android:textSize="@dimen/sp_14" android:textColor="@color/text_color_96" android:gravity="center" android:id="@+id/tvOfflineDesc" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_all_offer_stop" android:textAlignment="center"/>
</LinearLayout>
