<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center" android:orientation="vertical" android:layout_width="@dimen/dialog_width" android:textDirection="ltr" android:layoutDirection="ltr" style="@style/style_dialog">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/dp_10" android:paddingRight="@dimen/dp_10" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/dp_10" android:paddingEnd="@dimen/dp_10">
        <com.mrsool.customeview.CustomeTextViewSemiBold android:textSize="@dimen/sp_18" android:textColor="@color/dialog_title_color" android:id="@+id/txtdTitle" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_10" android:text="@string/lbl_dg_rate_mrsool" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10"/>
        <com.mrsool.customeview.CustomeTextViewRegular android:textSize="@dimen/sp_15" android:textColor="@color/dialog_text_color" android:id="@+id/txtdMessage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_10" android:text="@string/lbl_dg_ask_for_rate_msg" android:maxLines="20" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10"/>
        <com.mrsool.customeview.CustomeTextViewSemiBold android:textSize="@dimen/sp_15" android:textColor="@color/dialog_title_color" android:id="@+id/txtdTitle1" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_10" android:text="@string/lbl_dg_thanks_milion" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10"/>
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginTop="@dimen/dp_25" android:layout_marginRight="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_10" android:layout_weight="1" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10">
            <com.mrsool.customeview.CustomeTextViewRegular android:textSize="@dimen/sp_15" android:textColor="@color/search_text_color" android:gravity="center" android:id="@+id/txtLater" android:background="?attr/selectableItemBackground" android:padding="@dimen/dp_5" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/lbl_dg_later" android:layout_weight="1" android:textAllCaps="true"/>
            <com.mrsool.customeview.CustomeTextViewRegular android:textSize="@dimen/sp_15" android:textColor="@color/search_text_color" android:gravity="center" android:id="@+id/txtNoThanks" android:background="?attr/selectableItemBackground" android:padding="@dimen/dp_5" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/lbl_dg_no_thanks" android:layout_weight="1" android:textAllCaps="true"/>
            <com.mrsool.customeview.CustomeTextViewRegular android:textSize="@dimen/sp_15" android:textColor="@color/dialog_btn_color" android:gravity="center" android:id="@+id/txtRateNow" android:background="?attr/selectableItemBackground" android:padding="@dimen/dp_5" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/lbl_dg_rate_now" android:layout_weight="1" android:textAllCaps="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
