<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:paddingLeft="24dp" android:paddingTop="18dp" android:paddingRight="24dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:id="@+id/fingerprint_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/checkout_auth_confirm_payment"/>
        <ImageView android:id="@+id/fingerprint_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:src="@drawable/ic_fingerprint" android:layout_below="@+id/fingerprint_title"/>
        <TextView android:textSize="14sp" android:textColor="@color/checkout_text_color_hint" android:gravity="center_vertical" android:id="@+id/fingerprint_status" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:text="@string/checkout_fingerprint_touch_sensor" android:layout_toRightOf="@+id/fingerprint_icon" android:layout_alignTop="@+id/fingerprint_icon" android:layout_alignBottom="@+id/fingerprint_icon" android:layout_marginStart="16dp" android:layout_toEndOf="@+id/fingerprint_icon"/>
    </RelativeLayout>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:paddingLeft="12dp" android:paddingTop="4dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="12dp" android:paddingEnd="4dp">
        <Space android:visibility="invisible" android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <Button android:id="@+id/enter_pin_button" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkout_fingerprint_enter_pin"/>
        <Button android:id="@+id/cancel_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checkout_fingerprint_cancel"/>
    </LinearLayout>
</LinearLayout>
