<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/bottomSheet" android:background="@color/white" android:padding="@dimen/dp_16" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="59">
        <com.mrsool.customeview.CustomeTextViewRobotoMedium android:textSize="@dimen/sp_20" android:textColor="@color/red_lite_3" android:id="@+id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/payment_error_title"/>
        <com.mrsool.customeview.CustomeTextViewRobotoMedium android:textSize="@dimen/sp_14" android:textColor="@color/shops_title_text_gray" android:id="@+id/tvDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/payment_error_detail"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton android:textSize="@dimen/sp_18" android:gravity="center" android:id="@+id/btnClose" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_26" android:minHeight="@dimen/dp_48" android:text="@string/close" android:includeFontPadding="false" android:insetTop="@dimen/dp_0" android:insetBottom="@dimen/dp_0" android:textAllCaps="false" android:fontFamily="@font/roboto_medium" app:backgroundTint="@color/red_lite_3" app:cornerRadius="@dimen/dp_4"/>
</LinearLayout>
